bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Compilation error:
MonkeyTrouble:3: error: ';' expected but ')' found.
  return ((aSmile&&bSmile)||( (! asmile) && ! bSmile) ))
                                                       ^