bat.bool1.monkeytrouble.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
  return ((aSmile&&bSmile)||( (! asmile) && ! bSmile) ))
}